namespace/mcp/github/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: github-https
  namespace: mcp
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mcp.oglesby.io`) && PathPrefixStrip(`/github`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: github
          port: 80
  tls:
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: github-http
  namespace: mcp
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mcp.oglesby.io`) && PathPrefixStrip(`/github`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: github
          port: 80
